demo/versioned_docs/version-1.3.0/event-reference/08-nested-conditional-event.mdx
---
title: Nested Conditional Event
description: "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method."
sidebar_label: Nested Conditional Event
custom_edit_url: https://github.com/benedikt-buchert/tracking_docs/edit/main/demo/static/schemas/1.3.0/web/nested-conditional-event.json
---

import SchemaViewer from "@theme/SchemaViewer";
import SchemaJsonViewer from "@theme/SchemaJsonViewer";

# Nested Conditional Event

An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.

<SchemaViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
    title: "Nested Conditional Event",
    description:
      "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
    type: "object",
    required: ["event", "order_id", "shipping"],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "order_placed",
        examples: ["order_placed"],
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
      },
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      },
      order_id: {
        type: "string",
        description: "Unique identifier for the order.",
        examples: ["ORD-12345"],
      },
      shipping: {
        type: "object",
        description: "Shipping details for the order.",
        required: ["method"],
        if: {
          properties: { method: { const: "express" } },
          required: ["method"],
        },
        then: {
          description: "Express shipping includes a priority level.",
          properties: {
            priority_level: {
              type: "string",
              description: "Priority level for express delivery.",
              enum: ["high", "critical"],
              examples: ["high"],
            },
            guaranteed_by: {
              type: "string",
              description: "Guaranteed delivery date (ISO 8601).",
              format: "date",
              examples: ["2026-03-01"],
            },
          },
          required: ["priority_level"],
        },
        else: {
          description: "Standard shipping includes estimated delivery days.",
          properties: {
            estimated_days: {
              type: "integer",
              description: "Estimated number of days for delivery.",
              minimum: 1,
              maximum: 30,
              examples: [5],
            },
          },
        },
        properties: {
          method: {
            type: "string",
            description: "The shipping method selected by the customer.",
            enum: ["express", "standard"],
            examples: ["express"],
          },
        },
      },
    },
    "x-tracking-targets": ["web-datalayer-js"],
  }}
  sourceSchema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
    title: "Nested Conditional Event",
    description:
      "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
    "x-tracking-targets": ["web-datalayer-js"],
    type: "object",
    properties: {
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      },
      event: {
        type: "string",
        const: "order_placed",
        description: "The event name.",
        examples: ["order_placed"],
      },
      order_id: {
        type: "string",
        description: "Unique identifier for the order.",
        examples: ["ORD-12345"],
      },
      shipping: {
        type: "object",
        description: "Shipping details for the order.",
        properties: {
          method: {
            type: "string",
            description: "The shipping method selected by the customer.",
            enum: ["express", "standard"],
            examples: ["express"],
          },
        },
        required: ["method"],
        if: {
          properties: { method: { const: "express" } },
          required: ["method"],
        },
        then: {
          description: "Express shipping includes a priority level.",
          properties: {
            priority_level: {
              type: "string",
              description: "Priority level for express delivery.",
              enum: ["high", "critical"],
              examples: ["high"],
            },
            guaranteed_by: {
              type: "string",
              description: "Guaranteed delivery date (ISO 8601).",
              format: "date",
              examples: ["2026-03-01"],
            },
          },
          required: ["priority_level"],
        },
        else: {
          description: "Standard shipping includes estimated delivery days.",
          properties: {
            estimated_days: {
              type: "integer",
              description: "Estimated number of days for delivery.",
              minimum: 1,
              maximum: 30,
              examples: [5],
            },
          },
        },
      },
    },
    required: ["event", "order_id", "shipping"],
  }}
  sourcePath={"web/nested-conditional-event.json"}
  schemaSources={{
    "web/nested-conditional-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      title: "Nested Conditional Event",
      description:
        "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
        },
        event: {
          type: "string",
          const: "order_placed",
          description: "The event name.",
          examples: ["order_placed"],
        },
        order_id: {
          type: "string",
          description: "Unique identifier for the order.",
          examples: ["ORD-12345"],
        },
        shipping: {
          type: "object",
          description: "Shipping details for the order.",
          properties: {
            method: {
              type: "string",
              description: "The shipping method selected by the customer.",
              enum: ["express", "standard"],
              examples: ["express"],
            },
          },
          required: ["method"],
          if: {
            properties: { method: { const: "express" } },
            required: ["method"],
          },
          then: {
            description: "Express shipping includes a priority level.",
            properties: {
              priority_level: {
                type: "string",
                description: "Priority level for express delivery.",
                enum: ["high", "critical"],
                examples: ["high"],
              },
              guaranteed_by: {
                type: "string",
                description: "Guaranteed delivery date (ISO 8601).",
                format: "date",
                examples: ["2026-03-01"],
              },
            },
            required: ["priority_level"],
          },
          else: {
            description: "Standard shipping includes estimated delivery days.",
            properties: {
              estimated_days: {
                type: "integer",
                description: "Estimated number of days for delivery.",
                minimum: 1,
                maximum: 30,
                examples: [5],
              },
            },
          },
        },
      },
      required: ["event", "order_id", "shipping"],
    },
  }}
/>
<SchemaJsonViewer
  schema={{
    $schema: "https://json-schema.org/draft/2020-12/schema",
    $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
    title: "Nested Conditional Event",
    description:
      "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
    type: "object",
    required: ["event", "order_id", "shipping"],
    $defs: {
      strictObject: {
        type: "object",
        propertyNames: { maxLength: 40, pattern: "^(\\$schema)|[a-z0-9_]+$" },
        additionalProperties: {
          anyOf: [
            { $ref: "#/allOf/0/$defs/strictObject" },
            { type: "array", items: { $ref: "#/allOf/0/$defs/strictObject" } },
            { not: { type: "object" } },
          ],
        },
      },
    },
    $ref: "#/allOf/0/$defs/strictObject",
    properties: {
      event: {
        type: "string",
        description: "The name of the event.",
        const: "order_placed",
        examples: ["order_placed"],
      },
      ecommerce: {
        type: "object",
        description: "Ecommerce related data.",
        "x-gtm-clear": true,
      },
      user_data: {
        type: "object",
        description: "User related data.",
        "x-gtm-clear": true,
      },
      $schema: {
        type: "string",
        description:
          "Defines the structure of the event. This can be used to validate an event against the schema provided.",
        const:
          "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      },
      order_id: {
        type: "string",
        description: "Unique identifier for the order.",
        examples: ["ORD-12345"],
      },
      shipping: {
        type: "object",
        description: "Shipping details for the order.",
        required: ["method"],
        if: {
          properties: { method: { const: "express" } },
          required: ["method"],
        },
        then: {
          description: "Express shipping includes a priority level.",
          properties: {
            priority_level: {
              type: "string",
              description: "Priority level for express delivery.",
              enum: ["high", "critical"],
              examples: ["high"],
            },
            guaranteed_by: {
              type: "string",
              description: "Guaranteed delivery date (ISO 8601).",
              format: "date",
              examples: ["2026-03-01"],
            },
          },
          required: ["priority_level"],
        },
        else: {
          description: "Standard shipping includes estimated delivery days.",
          properties: {
            estimated_days: {
              type: "integer",
              description: "Estimated number of days for delivery.",
              minimum: 1,
              maximum: 30,
              examples: [5],
            },
          },
        },
        properties: {
          method: {
            type: "string",
            description: "The shipping method selected by the customer.",
            enum: ["express", "standard"],
            examples: ["express"],
          },
        },
      },
    },
    "x-tracking-targets": ["web-datalayer-js"],
  }}
  sourcePath={"web/nested-conditional-event.json"}
  schemaSources={{
    "web/nested-conditional-event.json": {
      $schema: "https://json-schema.org/draft/2020-12/schema",
      $id: "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
      title: "Nested Conditional Event",
      description:
        "An event demonstrating if/then/else conditional properties nested inside a property. The shipping details depend on the selected method.",
      "x-tracking-targets": ["web-datalayer-js"],
      type: "object",
      properties: {
        $schema: {
          type: "string",
          description:
            "Defines the structure of the event. This can be used to validate an event against the schema provided.",
          const:
            "https://tracking-docs-demo.buchert.digital/schemas/1.3.0/web/nested-conditional-event.json",
        },
        event: {
          type: "string",
          const: "order_placed",
          description: "The event name.",
          examples: ["order_placed"],
        },
        order_id: {
          type: "string",
          description: "Unique identifier for the order.",
          examples: ["ORD-12345"],
        },
        shipping: {
          type: "object",
          description: "Shipping details for the order.",
          properties: {
            method: {
              type: "string",
              description: "The shipping method selected by the customer.",
              enum: ["express", "standard"],
              examples: ["express"],
            },
          },
          required: ["method"],
          if: {
            properties: { method: { const: "express" } },
            required: ["method"],
          },
          then: {
            description: "Express shipping includes a priority level.",
            properties: {
              priority_level: {
                type: "string",
                description: "Priority level for express delivery.",
                enum: ["high", "critical"],
                examples: ["high"],
              },
              guaranteed_by: {
                type: "string",
                description: "Guaranteed delivery date (ISO 8601).",
                format: "date",
                examples: ["2026-03-01"],
              },
            },
            required: ["priority_level"],
          },
          else: {
            description: "Standard shipping includes estimated delivery days.",
            properties: {
              estimated_days: {
                type: "integer",
                description: "Estimated number of days for delivery.",
                minimum: 1,
                maximum: 30,
                examples: [5],
              },
            },
          },
        },
      },
      required: ["event", "order_id", "shipping"],
    },
  }}
/>
